--- a/personal/package.json
+++ b/personal/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.4.4",
+    "@react-three/fiber": "^9.2.0",
     "@tailwindcss/forms": "^0.5.10",
     "@types/gsap": "^1.20.2",
     "framer-motion": "^12.23.0",
@@ -18,6 +20,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.3",
+    "recharts": "^3.0.2",
     "three": "^0.178.0"
   },
   "devDependencies": {
