--- a/personal/package.json
+++ b/personal/package.json
@@ -16,6 +16,7 @@
     "@types/gsap": "^1.20.2",
     "framer-motion": "^12.23.0",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.525.0",
     "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
